# seetaface6_for_ros

./: CMakeLists.txt  README.md  detect_face.cpp  package.xml
seetaFace6Python/: face_age_demo.py  face_anti_spoofing_demo.py  face_detect_demo.py  face_gender_demo.py  face_landmark_demo.py  face_pose_ex_demo.py  face_recon_demo.py  face_track_demo.py  help_bashrc.md  my_takephoto.py  my_video_face_recog.py  readme.md
